:sparkles: New UI for grid layout

--- a/frontend/resources/styles/common/refactor/basic-rules.scss
+++ b/frontend/resources/styles/common/refactor/basic-rules.scss
@@ -316,6 +316,10 @@
     color: var(--input-foreground-color-active);
     background-color: var(--input-background-color-active);
   }
+  &[disabled] {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .input-icon {
