--- a/frontend/resources/styles/common/refactor/color-defs.scss
+++ b/frontend/resources/styles/common/refactor/color-defs.scss
@@ -16,7 +16,9 @@
   --green: #91fadb;
   --green-30: rgba(145, 250, 219, 0.3);
   --lilac: #bb97d8;
+  --pink: #ff6fe0;
   --strong-green: #00d1b8;
+
   // NOTIFICATION
   --dark-ok-color: var(--strong-green);
   --dark-warning-color: #ff9b49;
