--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -74,6 +74,7 @@ $s-380: calc(var(--s-4) * 95);
 $s-400: calc(var(--s-4) * 100);
 $s-480: calc(var(--s-4) * 120);
 $s-500: calc(var(--s-4) * 125);
+$s-512: calc(var(--s-4) * 128);
 $s-520: calc(var(--s-4) * 130);
 $s-664: calc(var(--s-4) * 166);
 $s-712: calc(var(--s-4) * 178);
