--- a/frontend/resources/styles/common/refactor/themes/default-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/default-theme.scss
@@ -13,6 +13,7 @@
   --color-background-disabled: var(--off-white);
   --color-foreground-primary: var(--white);
   --color-foreground-secondary: var(--off-white);
+  --color-foreground-tertiary: var(--pink);
   --color-foreground-disabled: var(--dark-gray-4);
   --color-accent-primary: var(--green);
   --color-accent-primary-muted: var(--green-30);
