--- a/frontend/resources/styles/common/refactor/themes/light-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/light-theme.scss
@@ -13,6 +13,7 @@
   --color-background-disabled: var(--light-gray-4);
   --color-foreground-primary: var(--black);
   --color-foreground-secondary: var(--off-black);
+  --color-foreground-tertiary: var(--pink);
   --color-foreground-disabled: var(--light-gray-1);
   --color-accent-primary: var(--purple);
   --color-accent-primary-muted: var(--purple-30);
