--- a/frontend/resources/styles/common/refactor/common-refactor.scss
+++ b/frontend/resources/styles/common/refactor/common-refactor.scss
@@ -15,4 +15,5 @@
 @import "common/refactor/shadows.scss";
 @import "common/refactor/z-index.scss";
 @import "common/refactor/mixins.scss";
+@import "common/refactor/focus.scss";
 @import "common/refactor/basic-rules.scss";
