--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/color_row.scss
@@ -118,6 +118,7 @@
       width: $s-60;
       border-radius: 0 $br-8 $br-8 0;
       .opacity-input {
+        padding: 0;
         border-radius: 0 $br-8 $br-8 0;
         min-width: $s-28;
       }
