--- a/frontend/src/app/main/ui/components/tab_container.scss
+++ b/frontend/src/app/main/ui/components/tab_container.scss
@@ -14,10 +14,13 @@
   .tab-container-content {
     overflow-y: auto;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
   }
 
   .tab-element {
-    height: fit-content;
+    flex: 1;
+    height: 100%;
   }
 }
 .tab-container-tabs {
