--- a/frontend/src/app/main/ui/viewer/inspect/code.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/code.scss
@@ -17,6 +17,7 @@
     }
   }
   .code-block {
+    padding: 0 $s-4 $s-8 0;
     .code-row-lang {
       display: flex;
       justify-content: space-between;
