--- a/frontend/src/app/main/ui/workspace/colorpicker/color_inputs.scss
+++ b/frontend/src/app/main/ui/workspace/colorpicker/color_inputs.scss
@@ -8,6 +8,8 @@
 
 .color-values {
   @include flexColumn;
+  margin-top: $s-8;
+
   &.disable-opacity {
     grid-template-columns: 3.5rem repeat(3, 1fr);
   }
@@ -16,6 +18,8 @@
     .input-wrapper {
       @extend .input-element;
       width: $s-84;
+      display: flex;
+      align-items: baseline;
     }
   }
   .hex-alpha-wrapper {
@@ -25,6 +29,9 @@
       width: $s-84;
       &.hex {
         width: $s-172;
+        display: flex;
+        align-items: baseline;
+        gap: $s-8;
       }
     }
   }
