--- a/frontend/src/app/main/ui/workspace/colorpicker/ramp.scss
+++ b/frontend/src/app/main/ui/workspace/colorpicker/ramp.scss
@@ -12,7 +12,7 @@
   height: $s-140;
   width: $s-256;
   margin-top: $s-12;
-  margin-bottom: $s-6;
+  margin-bottom: $s-12;
   cursor: pointer;
 
   .handler {
@@ -43,4 +43,7 @@
   gap: $s-4;
   height: $s-52;
   cursor: pointer;
+}
+.sliders-wrapper {
+  @include flexColumn;
 }
