--- a/frontend/src/app/main/ui/workspace/sidebar/options.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options.scss
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   padding-left: $s-12;
 
   .tab-spacing {
@@ -27,6 +28,7 @@
 
   .element-options {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: $s-16;
